# TCA_cancelations_prediction

./: README.md  pyproject.toml
conf/: logging.yml
conf/base/: catalog.yml  parameters_data_science.yml
data/01_raw/: ID_Agencias.xlsx  ID_Canales.xlsx  ID_Empresa.xlsx  ID_Estados.xlsx  ID_Habitacion.xlsx  ID_Paises.xlsx  ID_Paquete.xlsx  ID_Programa.xlsx  ID_Reservaciones.xlsx  ID_Segmento.xlsx
data/06_models/: best_hyper_params.json  final_model.pickle
data/06_models/classifier.pickle/2025-05-29T22.46.49.273Z/: classifier.pickle
docs/source/: conf.py  index.rst
notebooks/: fe_modelos.ipynb
src/cancelations_prediction/: __init__.py  __main__.py  settings.py
src/cancelations_prediction.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/cancelations_prediction/pipelines/data_processing/: nodes.py  pipeline.py
src/cancelations_prediction/pipelines/data_science/: nodes.py  pipeline.py
